// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`back button renders correctly | circle 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "alignSelf": "flex-start",
      "backgroundColor": "transparent",
      "borderRadius": 0,
      "borderWidth": 0,
      "height": 60,
      "justifyContent": "center",
      "margin": 0,
      "opacity": 1,
      "paddingHorizontal": 20,
      "paddingVertical": 10,
    }
  }
  testID="CloseButton"
>
  <SvgMock
    color="#B4B6BA"
  />
</View>
`;

exports[`back button renders correctly | thick 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "alignSelf": "flex-start",
      "backgroundColor": "transparent",
      "borderRadius": 0,
      "borderWidth": 0,
      "height": 60,
      "justifyContent": "center",
      "margin": 0,
      "opacity": 1,
      "paddingHorizontal": 20,
      "paddingVertical": 10,
    }
  }
  testID="CloseButton"
>
  <SvgMock
    color="#B4B6BA"
  />
</View>
`;

exports[`back button renders normally 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "alignSelf": "flex-start",
      "backgroundColor": "transparent",
      "borderRadius": 0,
      "borderWidth": 0,
      "height": 60,
      "justifyContent": "center",
      "margin": 0,
      "opacity": 1,
      "paddingHorizontal": 20,
      "paddingVertical": 10,
    }
  }
  testID="CloseButton"
>
  <SvgMock
    color="#B4B6BA"
  />
</View>
`;

exports[`back button renders with different color 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "alignSelf": "flex-start",
      "backgroundColor": "transparent",
      "borderRadius": 0,
      "borderWidth": 0,
      "height": 60,
      "justifyContent": "center",
      "margin": 0,
      "opacity": 1,
      "paddingHorizontal": 20,
      "paddingVertical": 10,
    }
  }
  testID="CloseButton"
>
  <SvgMock
    color="#3CC8E6"
  />
</View>
`;
